# web_scrape

./: .gitignore  pyproject.toml  requirements.txt
scripts/: run.sh
src/web_scrape/: __init__.py  __main__.py  render.py  smart_scrape.py  static_scrape.py  tools.py
